fix: resolve jar file paths with unencoded characters in GenericUiServlet
Refs: #412